# CodingSample

./: .gitignore
mySource/data/: MSW_Prob_ee.txt  solar_csound.data
mySource/include/: backgrounds.hh  csvParser.hh  dataStructures.hh  fftData.hh  flightToLuminosity.hh  fusionModels.hh  galliumInteraction.hh  jonMath.hh  kUnits.hh  kUnits.hhbak  my_class.hh  neutrinoOscillation.hh  nuclides.hh  oscillations.hh  pulseShaper.hh  quadFit.hh  quadraticFits.cpp  trajectoryToCoords.hh  variableParser.hh
mySource/src/: backgrounds.cpp  csvParser.cpp  fftData.cpp  flightToLuminosity.cpp  fusionModels.cpp  galliumInteraction.cpp  interp.cpp  jonMath.cpp  kUnits.cppbak  my_class.cpp  neutrinoOscillation.cpp  nuclides.cpp  oscillations.cpp  pulseShaper.cpp  quadFit.cpp  trajectoryToCoords.cpp  variableParser.cpp
nuSOL_IncidentParticles/GCRSpectra/: GCRCarbon.mac  GCRCarbon_10-100.mac  GCRCarbon_100-1000.mac  GCRCarbon_1000-10000.mac  GCRCarbon_10000-100000.mac  GCRCarbon_100000-1000000.mac  GCRCarbon_1000000-10000000.mac  GCRCarbon_10000000-100000000.mac  GCRCarbon_100000000-1000000000.mac  GCRFe.mac  (+49 more)
nuSolDirectCalc/: ACOToCoords.cpp  ACOorbits.txt  KyleToCoords  KyleToCoords.cpp  WSUOrbitsRSol.txt  WSUorbits.txt  batch.mac  histMaker.C  outwardTrajectory.txt.bak  play.txt  solar_distance_C3_60(days).csv
nuSolFastMonteCarlo/: ACOorbits.txt  AUtoRSol.cpp  IntegratingNeutrinoProbability.ods  KyleOrbit.csv  WSUorbits.txt  histoCombiner.C  lineOrbit.csv  makeLineOrbit  nuSolPerformance  solar_distance_C3_60(days).csv  trajectoryToCoords
nuSolFastMonteCarlo/source/: CMakeLists.txt  RateVsEnergy.txt  nuSolPerformance.cpp  severalPerf.bash
nuSolFastMonteCarlo/source/Old Codes/: nuSolPerformance.cpp  nuSolPerformance.feb23  nuSolPerformanceEliptical  nuSolPerformanceEliptical.cpp  nuSolPerformanceElipticalHours.cpp  nuSolPerformanceElipticalHoursBackup.cpp  nuSolPerformanceElipticalMinutes.cpp  nuSolPerformanceElipticalNeutralCurrent.cpp  nuSolPerformanceElipticalNeutralCurrentParallelized.cpp  nuSolPerformanceElipticalVec.cpp  nuSolPerformanceFile.cpp  nuSolPerformanceFileNeutralCurrentOptimistic.cpp  nuSolPerformanceFileNeutralCurrentOptimisticGuttingCopy.cpp  nuSolPerformanceOld.cpp
nuSolFastMonteCarlo_v2/: AUtoRSol  KyleOrbitParsed.csv  WSUOrbitsRSol.txt  makeLineOrbit.cpp
nuSolFastMonteCarlo_v2/source/: CMakeLists.txt  main.cpp
(+62 files in other folders)
